Add custom handler for text-align: inherit. https://bugs.webkit.org/show_bug.cgi?id=138577

Reviewed by NOBODY (OOPS!).

<th> was being handled improperly due to an unset flag when the
text-align property was explicitly set to inherit. This adds a custom
handler that sets the flag when necessary.

* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/style/StyleBuilderCustom.h:
(WebCore::Style::BuilderCustom::applyInheritTextAlign):
* LayoutTests/fast/table/center-th-when-parent-has-initial-text-align-expected.html:
* LayoutTests/fast/table/center-th-when-parent-has-initial-text-align.html: